--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A Scratch3 backend for online-save build with express.",
   "main": "app.js",
   "scripts": {
-    "test": "test"
+    "test": "test",
+    "start": "node app.js"
   },
   "repository": {
     "type": "git",
